# emdas

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO  analyze.c  analyze.h  appversion  emdas-config-version.cmake.in  emdas-config.cmake.in  emdas.c  image.c  image.h  iset.c  iset.h
.ci/: ci-script.sh
.github/workflows/: cmake.yml
cmake/: emdas-config.cmake.in
include/: analyze.h  buf.h  emdas.h  image.h  iset.h  opfields.h  p_emdas.h
include/emdas/: buf.h  dh.h  errors.h  iset.h
src/: CMakeLists.txt  analyze.c  buf.c  dh.c  emdas.c  errors.c  image.c  iset.c  libemdas.c  opfields.h  p_emdas.c
src/cmake/: EmdasConfig.cmake
tests/: mkbin.py  runtests.sh
